Superadmin control over new teams
